Added Links, Resume, Fixed Positioning

--- a/src/index.html
+++ b/src/index.html
@@ -12,33 +12,73 @@
 </head>
 
 <body>
+    <div id="particles"></div>
+
+    <nav>
+        <ul>
+            <li><a href="#">Intro</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Skill</a></li>
+            <li><a href="#">Experience</a></li>
+            <li><a href="#">Education</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+
     <main>
-        <nav>
-            <ul>
-                <li><a href="#">Intro</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Skill</a></li>
-                <li><a href="#">Experience</a></li>
-                <li><a href="#">Education</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
         <div id="intro">
-            <div id="particles"></div>
-            <div class="panel">
-                <div id="heading">
-                    <img class="avatar" src="avatar.jpg" alt="Shakib Haris"/>
-                    <h1 class="display-1">
-                        <span id="name">Shakib Haris</span>
-                    </h1>
-                    <span id="short-desc">
-                        Full-Stack <b>.NET</b> Developer
-                    </span>
-                </div>
-            </div>
+            <img class="avatar" src="avatar.jpg" alt="Shakib Haris" />
+            <span id="name">Shakib Haris</span>
+            <span id="short-desc">
+                Full-Stack <b>.NET</b> Developer
+            </span>
+            <span id="links">
+                <button>
+                    <a href="https://bd.linkedin.com/in/skb50bd" target="_blank">
+                        <img src="assets/linkedin.svg" />
+                    </a>
+                </button>
+
+                <button>
+                    <a href="https://github.com/skb50bd" target="_blank">
+                        <img src="assets/github.svg" />
+                    </a>
+                </button>
+
+                <button>
+                    <a href="https://dev.azure.com/brotal" target="_blank">
+                        <img src="assets/azure-devops.svg" />
+                    </a>
+                </button>
+
+                <button><a href="mailto:skb50bd@gmail.com" target="_blank">
+                        <img src="assets/mail.svg" />
+                    </a>
+                </button>
+
+                <button><a href="https://fb.com/skb50bd" target="_blank">
+                        <img src="assets/facebook.svg" />
+                    </a>
+                </button>
+            </span>
+
+            <button id="download-resume-button">
+                <a href="assets/shakib-haris-resume.pdf">
+                    <div>
+                        <img src="assets/download.svg" /> Resume
+                    </div>
+                </a>
+            </button>
         </div>
         <div id="skills">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem excepturi rerum beatae laudantium iusto nemo adipisci temporibus eos eaque laborum!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem excepturi rerum beatae laudantium iusto nemo
+            adipisci temporibus eos eaque laborum!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem excepturi rerum beatae laudantium iusto nemo
+            adipisci temporibus eos eaque laborum!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem excepturi rerum beatae laudantium iusto nemo
+            adipisci temporibus eos eaque laborum!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem excepturi rerum beatae laudantium iusto nemo
+            adipisci temporibus eos eaque laborum!
         </div>
     </main>
 
