--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#intro">Intro</a></li>
+            <li><a class="active" href="#intro">Intro</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#experience">Experience</a></li>
@@ -24,7 +24,7 @@
 
     <main>
         <div id="intro">
-            <img id="avatar" src="assets/avatar.jpg" alt="Shakib Haris" height="8rem"/>
+            <img id="avatar" src="assets/avatar.jpg" alt="Shakib Haris" height="8rem" />
             <span id="name">Shakib Haris</span>
             <span id="short-desc">
                 Full-Stack <b>.NET</b> Developer
@@ -60,8 +60,7 @@
             </span>
 
             <button id="download-resume-button">
-                <a target="_blank"
-                    href="assets/shakib-haris-resume.pdf">
+                <a target="_blank" href="assets/shakib-haris-resume.pdf">
                     <div>
                         <img src="assets/download.svg" /> Resume
                     </div>
@@ -73,30 +72,38 @@
             <h1 class="section-header">
                 Projects
             </h1>
-            
+
             <div class="card-deck">
                 <div class="card">
                     <img class="project-image" src="assets/avatar.jpg" alt="">
                     <p class="project-description">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur error odio laboriosam maiores voluptatibus neque? Doloribus libero ipsa maxime nam cupiditate quos perferendis sed dignissimos aliquam, soluta accusamus aperiam earum.
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur error odio laboriosam maiores
+                        voluptatibus neque? Doloribus libero ipsa maxime nam cupiditate quos perferendis sed dignissimos
+                        aliquam, soluta accusamus aperiam earum.
                     </p>
                 </div>
                 <div class="card">
                     <img class="project-image" src="assets/avatar.jpg" alt="">
                     <p class="project-description">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur error odio laboriosam maiores voluptatibus neque? Doloribus libero ipsa maxime nam cupiditate quos perferendis sed dignissimos aliquam, soluta accusamus aperiam earum.
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur error odio laboriosam maiores
+                        voluptatibus neque? Doloribus libero ipsa maxime nam cupiditate quos perferendis sed dignissimos
+                        aliquam, soluta accusamus aperiam earum.
                     </p>
                 </div>
                 <div class="card">
                     <img class="project-image" src="assets/avatar.jpg" alt="">
                     <p class="project-description">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur error odio laboriosam maiores voluptatibus neque? Doloribus libero ipsa maxime nam cupiditate quos perferendis sed dignissimos aliquam, soluta accusamus aperiam earum.
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur error odio laboriosam maiores
+                        voluptatibus neque? Doloribus libero ipsa maxime nam cupiditate quos perferendis sed dignissimos
+                        aliquam, soluta accusamus aperiam earum.
                     </p>
                 </div>
                 <div class="card">
                     <img class="project-image" src="assets/avatar.jpg" alt="">
                     <p class="project-description">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur error odio laboriosam maiores voluptatibus neque? Doloribus libero ipsa maxime nam cupiditate quos perferendis sed dignissimos aliquam, soluta accusamus aperiam earum.
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur error odio laboriosam maiores
+                        voluptatibus neque? Doloribus libero ipsa maxime nam cupiditate quos perferendis sed dignissimos
+                        aliquam, soluta accusamus aperiam earum.
                     </p>
                 </div>
             </div>
@@ -121,7 +128,42 @@
             <h1 class="section-header">
                 Experience
             </h1>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta recusandae deleniti dolorem excepturi et consequuntur, non doloribus enim necessitatibus nulla similique aspernatur expedita nobis quae obcaecati rem maiores dolore tempore ad maxime dolores, nisi voluptatibus. Rem aut enim eos, quae a debitis laboriosam commodi magni voluptatum iure est minima ut numquam repellat ipsam sapiente. In fugit, laboriosam maxime quas explicabo minus assumenda numquam nobis repudiandae non, cupiditate quae, voluptates dignissimos mollitia harum illum similique provident rem? Voluptatem maiores maxime architecto! Odio sint tenetur necessitatibus dolor sit maiores similique porro, molestias distinctio accusantium, deleniti tempora harum eos excepturi nulla? Laboriosam aut facilis veritatis ducimus ullam excepturi sequi, nostrum porro illum in corporis. Sed nemo eaque id, laboriosam reiciendis corporis consequuntur, odit atque rerum aliquid excepturi voluptas, facilis quae facere voluptatem ullam enim ipsum iste dolorem natus magni nisi blanditiis! Provident odio voluptates libero at cum necessitatibus ullam omnis doloribus corporis aspernatur accusamus maiores, voluptate deleniti sequi, facere mollitia eos, distinctio nihil laboriosam temporibus harum dignissimos nobis reiciendis? Porro doloribus consequatur iusto consequuntur amet alias repellat temporibus animi sapiente, quia deserunt facilis est commodi omnis esse architecto cum, in, aliquam reiciendis corrupti distinctio repudiandae. Placeat, eius. Dolorum nihil quae ad minima quia.
+
+            <div id="work-experience">
+
+            </div>
+
+            <div id="education">
+                <h2 class="sub-section-header">
+                    Education
+                </h2>
+
+                <div class="card">
+
+                    <div class="header" title="Degree">
+                        <img src="assets/graduate.svg" />
+                        <h3>
+                            B.Sc. in Computer Science & Engineering
+                        </h3>
+                    </div>
+
+                    <a href="https://ewubd.edu"
+                        target="_blank">
+                        <h2 id="institution" title="Institution">
+                            East West University
+                        </h2>
+                    </a>
+                    <span>
+                        Studying at EWU was my first step to pursue career as a Software Engineer. I am happy that I
+                        took my time to complete the curriculum.
+                    </span>
+
+                    <div class="sub-header" title="Time Period">
+                        <img src="assets/calendar.svg" alt="">
+                        <span>2015 - 2020</span>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div id="contact">
