--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav>
         <ul>
-            <li><a class="active" href="#intro">Intro</a></li>
+            <li><a href="#intro">Intro</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#experience">Experience</a></li>
@@ -114,14 +114,60 @@
                 Skills
             </h1>
 
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem excepturi rerum beatae laudantium iusto nemo
-            adipisci temporibus eos eaque laborum!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem excepturi rerum beatae laudantium iusto nemo
-            adipisci temporibus eos eaque laborum!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem excepturi rerum beatae laudantium iusto nemo
-            adipisci temporibus eos eaque laborum!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem excepturi rerum beatae laudantium iusto nemo
-            adipisci temporibus eos eaque laborum!
+            <div id="skillset">
+                <ul class="skills-bar-container">
+                    <li>
+                        <div class="progressbar-title">
+                            <h3>HTML5</h3>
+                            <span class="percent" id="html-percent"></span>
+                        </div>
+                        <div class="bar-container">
+                            <span class="progressbar" id="progress-html"></span>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="progressbar-title">
+                            <h3>CSS / SASS</h3>
+                            <span class="percent" id="css-percent"></span>
+                        </div>
+                        <div class="bar-container">
+                            <span class="progressbar" id="progress-css"></span>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="progressbar-title">
+                            <h3>JavaScript / jQuery</h3>
+                            <span class="percent" id="javascript-percent"></span>
+                        </div>
+                        <div class="bar-container">
+                            <span class="progressbar" id="progress-javascript"></span>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="progressbar-title">
+                            <h3>PHP</h3>
+                            <span class="percent" id="php-percent"></span>
+                        </div>
+                        <div class="bar-container">
+                            <span class="progressbar" id="progress-php"></span>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="progressbar-title">
+                            <h3>AngularJS</h3>
+                            <span class="percent" id="angular-percent"></span>
+                        </div>
+                        <div class="bar-container">
+                            <span class="progressbar" id="progress-angular"></span>
+                        </div>
+                    </li>
+
+                </ul>
+            </div>
         </div>
 
         <div id="experience">
@@ -130,7 +176,9 @@
             </h1>
 
             <div id="work-experience">
-
+                <h2 class="sub-section-header">
+                    Work
+                </h2>
             </div>
 
             <div id="education">
@@ -147,8 +195,7 @@
                         </h3>
                     </div>
 
-                    <a href="https://ewubd.edu"
-                        target="_blank">
+                    <a href="https://ewubd.edu" target="_blank">
                         <h2 id="institution" title="Institution">
                             East West University
                         </h2>
