Added contacts - Phase 1

--- a/src/index.html
+++ b/src/index.html
@@ -265,7 +265,13 @@
             <h1 class="section-header">
                 Contact
             </h1>
-            This is the footer
+            
+            <div class="contact-container">
+                <img src="assets/shakib-haris.jpg" alt="Shakib Haris">
+                <div class="content">
+                    
+                </div>
+            </div>
         </div>
     </main>
 
