--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
             <span id="short-desc">
                 Full-Stack <b>.NET</b> Developer
             </span>
-            <span id="links">
+            <div class="links">
                 <button>
                     <a href="https://bd.linkedin.com/in/skb50bd" target="_blank">
                         <img src="assets/linkedin.svg" />
@@ -57,7 +57,7 @@
                         <img src="assets/facebook.svg" />
                     </a>
                 </button>
-            </span>
+            </div>
 
             <button id="download-resume-button">
                 <a target="_blank" href="assets/shakib-haris-resume.pdf">
@@ -269,8 +269,48 @@
             <div class="contact-container">
                 <img src="assets/shakib-haris.jpg" alt="Shakib Haris">
                 <div class="content">
-                    
+                    <span class="content-name">Name</span>
+                    <span class="content-value">Shakib Haris</span>
+
+                    <span class="content-name">Email</span>
+                    <span class="content-value"><a href="mailto:skb50bd@gmail.com">skb50bd@gmail.com</a></span>
+
+                    <span class="content-name">Phone</span>
+                    <span class="content-value"><a href="tel:+8801676203752">+880 1676203752</a></span>
+
+                    <span class="content-name">Location</span>
+                    <span class="content-value">Dhaka, Bangladesh</span>
                 </div>
+            </div>
+
+            <div class="links">
+                <button>
+                    <a href="https://bd.linkedin.com/in/skb50bd" target="_blank">
+                        <img src="assets/linkedin.svg" />
+                    </a>
+                </button>
+
+                <button>
+                    <a href="https://github.com/skb50bd" target="_blank">
+                        <img src="assets/github.svg" />
+                    </a>
+                </button>
+
+                <button>
+                    <a href="https://dev.azure.com/brotal" target="_blank">
+                        <img src="assets/azure-devops.svg" />
+                    </a>
+                </button>
+
+                <button><a href="mailto:skb50bd@gmail.com" target="_blank">
+                        <img src="assets/mail.svg" />
+                    </a>
+                </button>
+
+                <button><a href="https://fb.com/skb50bd" target="_blank">
+                        <img src="assets/facebook.svg" />
+                    </a>
+                </button>
             </div>
         </div>
     </main>
