--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     </nav>
 
     <main>
-        <div id="intro">
+        <section id="intro">
             <img id="avatar" src="assets/avatar.jpg" alt="Shakib Haris" height="8rem" />
             <span id="name">Shakib Haris</span>
             <span id="short-desc">
@@ -66,9 +66,9 @@
                     </div>
                 </a>
             </button>
-        </div>
+        </section>
 
-        <div id="projects">
+        <section id="projects">
             <h1 class="section-header">
                 Projects
             </h1>
@@ -107,9 +107,9 @@
                     </p>
                 </div>
             </div>
-        </div>
+        </section>
 
-        <div id="skills">
+        <section id="skills">
             <h1 class="section-header">
                 Skills
             </h1>
@@ -168,9 +168,9 @@
 
                 </ul>
             </div>
-        </div>
+        </section>
 
-        <div id="experience">
+        <section id="experience">
             <h1 class="section-header">
                 Experience
             </h1>
@@ -259,9 +259,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
 
-        <div id="contact">
+        <section id="contact">
             <h1 class="section-header">
                 Contact
             </h1>
@@ -312,7 +312,7 @@
                     </a>
                 </button>
             </div>
-        </div>
+        </section>
     </main>
 
     <script src="js/particles.min.js" defer></script>
