Skillbars animated with js

--- a/src/index.html
+++ b/src/index.html
@@ -115,58 +115,71 @@
             </h1>
 
             <div id="skillset">
-                <ul class="skills-bar-container">
-                    <li>
-                        <div class="progressbar-title">
-                            <h3>HTML5</h3>
-                            <span class="percent" id="html-percent"></span>
-                        </div>
-                        <div class="bar-container">
-                            <span class="progressbar" id="progress-html"></span>
-                        </div>
-                    </li>
+                <noscript>
+                    <h3>
+                        Skill levels don't show without JavaScript
+                    </h3>
+                </noscript>
 
-                    <li>
-                        <div class="progressbar-title">
-                            <h3>CSS / SASS</h3>
-                            <span class="percent" id="css-percent"></span>
-                        </div>
-                        <div class="bar-container">
-                            <span class="progressbar" id="progress-css"></span>
-                        </div>
-                    </li>
+                <div class="skill" data-skill-name="C#" data-skill-percent="90">
+                    <div class="skill-header">
+                        <span class="skill-name"></span>
+                        <span class="skill-percent"></span>
+                    </div>
+                    <div class="progress-base">
+                        <div></div>
+                    </div>
+                </div>
 
-                    <li>
-                        <div class="progressbar-title">
-                            <h3>JavaScript / jQuery</h3>
-                            <span class="percent" id="javascript-percent"></span>
-                        </div>
-                        <div class="bar-container">
-                            <span class="progressbar" id="progress-javascript"></span>
-                        </div>
-                    </li>
+                <div class="skill" data-skill-name="F#" data-skill-percent="70">
+                    <div class="skill-header">
+                        <span class="skill-name"></span>
+                        <span class="skill-percent"></span>
+                    </div>
+                    <div class="progress-base">
+                        <div></div>
+                    </div>
+                </div>
 
-                    <li>
-                        <div class="progressbar-title">
-                            <h3>PHP</h3>
-                            <span class="percent" id="php-percent"></span>
-                        </div>
-                        <div class="bar-container">
-                            <span class="progressbar" id="progress-php"></span>
-                        </div>
-                    </li>
+                <div class="skill" data-skill-name="ASP.NET Core" data-skill-percent="90">
+                    <div class="skill-header">
+                        <span class="skill-name"></span>
+                        <span class="skill-percent"></span>
+                    </div>
+                    <div class="progress-base">
+                        <div></div>
+                    </div>
+                </div>
 
-                    <li>
-                        <div class="progressbar-title">
-                            <h3>AngularJS</h3>
-                            <span class="percent" id="angular-percent"></span>
-                        </div>
-                        <div class="bar-container">
-                            <span class="progressbar" id="progress-angular"></span>
-                        </div>
-                    </li>
+                <div class="skill" data-skill-name="HTML5" data-skill-percent="85">
+                    <div class="skill-header">
+                        <span class="skill-name"></span>
+                        <span class="skill-percent"></span>
+                    </div>
+                    <div class="progress-base">
+                        <div></div>
+                    </div>
+                </div>
 
-                </ul>
+                <div class="skill" data-skill-name="CSS/SASS" data-skill-percent="80">
+                    <div class="skill-header">
+                        <span class="skill-name"></span>
+                        <span class="skill-percent"></span>
+                    </div>
+                    <div class="progress-base">
+                        <div></div>
+                    </div>
+                </div>
+
+                <div class="skill" data-skill-name="JavaScript/jQuery" data-skill-percent="75">
+                    <div class="skill-header">
+                        <span class="skill-name"></span>
+                        <span class="skill-percent"></span>
+                    </div>
+                    <div class="progress-base">
+                        <div></div>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -265,7 +278,7 @@
             <h1 class="section-header">
                 Contact
             </h1>
-            
+
             <div class="contact-container">
                 <img src="assets/shakib-haris.jpg" alt="Shakib Haris">
                 <div class="content">
