--- a/src/index.html
+++ b/src/index.html
@@ -131,6 +131,16 @@
                     </div>
                 </div>
 
+                <div class="skill" data-skill-name="ASP.NET Core" data-skill-percent="90">
+                    <div class="skill-header">
+                        <span class="skill-name"></span>
+                        <span class="skill-percent"></span>
+                    </div>
+                    <div class="progress-base">
+                        <div></div>
+                    </div>
+                </div>
+
                 <div class="skill" data-skill-name="F#" data-skill-percent="70">
                     <div class="skill-header">
                         <span class="skill-name"></span>
@@ -141,7 +151,7 @@
                     </div>
                 </div>
 
-                <div class="skill" data-skill-name="ASP.NET Core" data-skill-percent="90">
+                <div class="skill" data-skill-name="Python" data-skill-percent="70">
                     <div class="skill-header">
                         <span class="skill-name"></span>
                         <span class="skill-percent"></span>
@@ -161,7 +171,7 @@
                     </div>
                 </div>
 
-                <div class="skill" data-skill-name="CSS/SASS" data-skill-percent="80">
+                <div class="skill" data-skill-name="CSS / SASS" data-skill-percent="80">
                     <div class="skill-header">
                         <span class="skill-name"></span>
                         <span class="skill-percent"></span>
@@ -171,7 +181,17 @@
                     </div>
                 </div>
 
-                <div class="skill" data-skill-name="JavaScript/jQuery" data-skill-percent="75">
+                <div class="skill" data-skill-name="JavaScript / jQuery" data-skill-percent="75">
+                    <div class="skill-header">
+                        <span class="skill-name"></span>
+                        <span class="skill-percent"></span>
+                    </div>
+                    <div class="progress-base">
+                        <div></div>
+                    </div>
+                </div>
+
+                <div class="skill" data-skill-name="C++" data-skill-percent="65">
                     <div class="skill-header">
                         <span class="skill-name"></span>
                         <span class="skill-percent"></span>
