Added twitter link, optimized animations

--- a/src/index.html
+++ b/src/index.html
@@ -48,8 +48,9 @@
                     </a>
                 </button>
 
-                <button><a href="mailto:skb50bd@gmail.com" target="_blank">
-                        <img src="assets/mail.svg" />
+                <button>
+                    <a href="https://twitter.com/skb50bd" target="_blank">
+                        <img src="assets/twitter.svg" />
                     </a>
                 </button>
 
@@ -335,8 +336,9 @@
                     </a>
                 </button>
 
-                <button><a href="mailto:skb50bd@gmail.com" target="_blank">
-                        <img src="assets/mail.svg" />
+                <button>
+                    <a href="https://twitter.com/skb50bd" target="_blank">
+                        <img src="assets/twitter.svg" />
                     </a>
                 </button>
 
