added paticles animation

--- a/src/index.html
+++ b/src/index.html
@@ -111,94 +111,97 @@
         </section>
 
         <section id="skills">
-            <h1 class="section-header">
-                Skills
-            </h1>
+            <div id="skill-particles"></div>
+            <div class="content">
+                <h1 class="section-header">
+                    Skills
+                </h1>
 
-            <div id="skillset">
-                <noscript>
-                    <h3>
-                        Skill levels don't show without JavaScript
-                    </h3>
-                </noscript>
+                <div id="skillset">
+                    <noscript>
+                        <h3>
+                            Skill levels don't show without JavaScript
+                        </h3>
+                    </noscript>
 
-                <div class="skill" data-skill-name="C#" data-skill-percent="90">
-                    <div class="skill-header">
-                        <span class="skill-name"></span>
-                        <span class="skill-percent"></span>
+                    <div class="skill" data-skill-name="C#" data-skill-percent="90">
+                        <div class="skill-header">
+                            <span class="skill-name"></span>
+                            <span class="skill-percent"></span>
+                        </div>
+                        <div class="progress-base">
+                            <div></div>
+                        </div>
                     </div>
-                    <div class="progress-base">
-                        <div></div>
-                    </div>
-                </div>
 
-                <div class="skill" data-skill-name="ASP.NET Core" data-skill-percent="90">
-                    <div class="skill-header">
-                        <span class="skill-name"></span>
-                        <span class="skill-percent"></span>
+                    <div class="skill" data-skill-name="ASP.NET Core" data-skill-percent="90">
+                        <div class="skill-header">
+                            <span class="skill-name"></span>
+                            <span class="skill-percent"></span>
+                        </div>
+                        <div class="progress-base">
+                            <div></div>
+                        </div>
                     </div>
-                    <div class="progress-base">
-                        <div></div>
-                    </div>
-                </div>
 
-                <div class="skill" data-skill-name="F#" data-skill-percent="70">
-                    <div class="skill-header">
-                        <span class="skill-name"></span>
-                        <span class="skill-percent"></span>
+                    <div class="skill" data-skill-name="F#" data-skill-percent="70">
+                        <div class="skill-header">
+                            <span class="skill-name"></span>
+                            <span class="skill-percent"></span>
+                        </div>
+                        <div class="progress-base">
+                            <div></div>
+                        </div>
                     </div>
-                    <div class="progress-base">
-                        <div></div>
-                    </div>
-                </div>
 
-                <div class="skill" data-skill-name="Python" data-skill-percent="70">
-                    <div class="skill-header">
-                        <span class="skill-name"></span>
-                        <span class="skill-percent"></span>
+                    <div class="skill" data-skill-name="Python" data-skill-percent="70">
+                        <div class="skill-header">
+                            <span class="skill-name"></span>
+                            <span class="skill-percent"></span>
+                        </div>
+                        <div class="progress-base">
+                            <div></div>
+                        </div>
                     </div>
-                    <div class="progress-base">
-                        <div></div>
-                    </div>
-                </div>
 
-                <div class="skill" data-skill-name="HTML5" data-skill-percent="85">
-                    <div class="skill-header">
-                        <span class="skill-name"></span>
-                        <span class="skill-percent"></span>
+                    <div class="skill" data-skill-name="HTML5" data-skill-percent="85">
+                        <div class="skill-header">
+                            <span class="skill-name"></span>
+                            <span class="skill-percent"></span>
+                        </div>
+                        <div class="progress-base">
+                            <div></div>
+                        </div>
                     </div>
-                    <div class="progress-base">
-                        <div></div>
-                    </div>
-                </div>
 
-                <div class="skill" data-skill-name="CSS / SASS" data-skill-percent="80">
-                    <div class="skill-header">
-                        <span class="skill-name"></span>
-                        <span class="skill-percent"></span>
+                    <div class="skill" data-skill-name="CSS / SASS" data-skill-percent="80">
+                        <div class="skill-header">
+                            <span class="skill-name"></span>
+                            <span class="skill-percent"></span>
+                        </div>
+                        <div class="progress-base">
+                            <div></div>
+                        </div>
                     </div>
-                    <div class="progress-base">
-                        <div></div>
-                    </div>
-                </div>
 
-                <div class="skill" data-skill-name="JavaScript / jQuery" data-skill-percent="75">
-                    <div class="skill-header">
-                        <span class="skill-name"></span>
-                        <span class="skill-percent"></span>
+                    <div class="skill" data-skill-name="JavaScript / jQuery" data-skill-percent="75">
+                        <div class="skill-header">
+                            <span class="skill-name"></span>
+                            <span class="skill-percent"></span>
+                        </div>
+                        <div class="progress-base">
+                            <div></div>
+                        </div>
                     </div>
-                    <div class="progress-base">
-                        <div></div>
-                    </div>
-                </div>
 
-                <div class="skill" data-skill-name="C++" data-skill-percent="65">
-                    <div class="skill-header">
-                        <span class="skill-name"></span>
-                        <span class="skill-percent"></span>
-                    </div>
-                    <div class="progress-base">
-                        <div></div>
+                    <div class="skill" data-skill-name="C++" data-skill-percent="65">
+                        <div class="skill-header">
+                            <span class="skill-name"></span>
+                            <span class="skill-percent"></span>
+                        </div>
+                        <div class="progress-base">
+                            <div></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -242,7 +245,7 @@
                     <div class="header" title="Designation">
                         <img src="assets/developer.svg" />
                         <h3>
-                            Software Engineer
+                            Full-Stack Developer
                         </h3>
                     </div>
 
@@ -347,6 +350,10 @@
                     </a>
                 </button>
             </div>
+
+            <span id="footer-copyright">
+                Made with ❤️ by <b>Shakib Haris</b> | ©2020
+            </span>
         </section>
     </main>
 
