Intro Particles added

--- a/src/index.html
+++ b/src/index.html
@@ -24,49 +24,53 @@
 
     <main>
         <section id="intro">
-            <img id="avatar" src="assets/avatar.jpg" alt="Shakib Haris" height="8rem" />
-            <span id="name">Shakib Haris</span>
-            <span id="short-desc">
-                Full-Stack <b>.NET</b> Developer
-            </span>
-            <div class="links">
-                <button>
-                    <a href="https://bd.linkedin.com/in/skb50bd" target="_blank">
-                        <img src="assets/linkedin.svg" />
-                    </a>
-                </button>
+            <div id="intro-particles"></div>
+            
+            <div class="content">
+                <img id="avatar" src="assets/avatar.jpg" alt="Shakib Haris" height="8rem" />
+                <span id="name">Shakib Haris</span>
+                <span id="short-desc">
+                    Full-Stack <b>.NET</b> Developer
+                </span>
+                <div class="links">
+                    <button>
+                        <a href="https://bd.linkedin.com/in/skb50bd" target="_blank">
+                            <img src="assets/linkedin.svg" />
+                        </a>
+                    </button>
 
-                <button>
-                    <a href="https://github.com/skb50bd" target="_blank">
-                        <img src="assets/github.svg" />
-                    </a>
-                </button>
+                    <button>
+                        <a href="https://github.com/skb50bd" target="_blank">
+                            <img src="assets/github.svg" />
+                        </a>
+                    </button>
 
-                <button>
-                    <a href="https://dev.azure.com/brotal" target="_blank">
-                        <img src="assets/azure-devops.svg" />
-                    </a>
-                </button>
+                    <button>
+                        <a href="https://dev.azure.com/brotal" target="_blank">
+                            <img src="assets/azure-devops.svg" />
+                        </a>
+                    </button>
 
-                <button>
-                    <a href="https://twitter.com/skb50bd" target="_blank">
-                        <img src="assets/twitter.svg" />
-                    </a>
-                </button>
+                    <button>
+                        <a href="https://twitter.com/skb50bd" target="_blank">
+                            <img src="assets/twitter.svg" />
+                        </a>
+                    </button>
 
-                <button><a href="https://fb.com/skb50bd" target="_blank">
-                        <img src="assets/facebook.svg" />
+                    <button><a href="https://fb.com/skb50bd" target="_blank">
+                            <img src="assets/facebook.svg" />
+                        </a>
+                    </button>
+                </div>
+
+                <button id="download-resume-button">
+                    <a target="_blank" href="assets/shakib-haris-resume.pdf">
+                        <div>
+                            <img src="assets/download.svg" /> Resume
+                        </div>
                     </a>
                 </button>
             </div>
-
-            <button id="download-resume-button">
-                <a target="_blank" href="assets/shakib-haris-resume.pdf">
-                    <div>
-                        <img src="assets/download.svg" /> Resume
-                    </div>
-                </a>
-            </button>
         </section>
 
         <section id="projects">
