--- a/src/index.html
+++ b/src/index.html
@@ -362,8 +362,7 @@
     </main>
 
     <script src="js/particles.min.js" defer></script>
-    <script src="js/lib.js" defer></script>
-    <script src="js/script.js" defer></script>
+    <script type="module" src="js/script.js" defer></script>
 </body>
 
 </html>
