twitter icon removed

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     <main>
         <section id="intro">
             <div id="intro-particles"></div>
-            
+
             <div class="content">
                 <img id="avatar" src="assets/avatar.jpg" alt="Shakib Haris" height="8rem" />
                 <span id="name">Shakib Haris</span>
@@ -51,11 +51,11 @@
                         </a>
                     </button>
 
-                    <button>
+                    <!-- <button>
                         <a href="https://twitter.com/skb50bd" target="_blank">
                             <img src="assets/twitter.svg" />
                         </a>
-                    </button>
+                    </button> -->
 
                     <button><a href="https://fb.com/skb50bd" target="_blank">
                             <img src="assets/facebook.svg" />
@@ -343,11 +343,11 @@
                     </a>
                 </button>
 
-                <button>
+                <!-- <button>
                     <a href="https://twitter.com/skb50bd" target="_blank">
                         <img src="assets/twitter.svg" />
                     </a>
-                </button>
+                </button> -->
 
                 <button><a href="https://fb.com/skb50bd" target="_blank">
                         <img src="assets/facebook.svg" />
