--- a/src/index.html
+++ b/src/index.html
@@ -361,7 +361,7 @@
         </section>
     </main>
 
-    <script src="js/particles.min.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js" defer></script>
     <script type="module" src="js/script.js" defer></script>
 </body>
 
